--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Test with pytest
         run: |
           # set SPARK_HOME for raydp-submit to run
-          python $(python -c "import pyspark,os;print(os.path.dirname(pyspark.__file__))")/find_spark_home.py
+          $(python -c "import pyspark,os;print(os.path.dirname(pyspark.__file__))")/sbin/spark_config.sh
           pytest python/raydp/tests/
       - name: Test Examples
         run: |
