--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Test with pytest
         run: |
           # set SPARK_HOME for raydp-submit to run
-          $(python -c "import pyspark,os;print(os.path.dirname(pyspark.__file__))")/sbin/spark_config.sh
+          $(python -c "import pyspark,os;print(os.path.dirname(pyspark.__file__))")/sbin/spark-config.sh
           pytest python/raydp/tests/
       - name: Test Examples
         run: |
