--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -69,7 +69,7 @@ jobs:
           else
             pip install torch
           fi
-          pip install pytest koalas tensorflow tabulate ray[tune] xgboost_ray grpcio-tools
+          pip install pytest koalas tensorflow tabulate ray[tune]==1.3.0 xgboost_ray grpcio-tools
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
           pip install horovod[pytorch,ray]
