--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -46,7 +46,12 @@ jobs:
       - name: Install extra dependencies for macOS
         if: matrix.os == 'macos-latest'
         run: |
-          brew install libuv libomp
+          brew install libuv libomp mpich
+      - name: Install extra dependencies for Ubuntu
+        if: matrix.os == "ubuntu-latest"
+        run: |
+          sudo apt-get install -y mpich
+
       - name: Cache pip - Ubuntu
         if: matrix.os == 'ubuntu-latest'
         uses: actions/cache@v2
