--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -91,7 +91,7 @@ jobs:
           pip install dist/raydp-*.whl
       - name: Lint
         run: |
-          pip install pylint
+          pip install pylint==2.8.3
           pylint --rcfile=python/pylintrc python/raydp
       - name: Test with pytest
         run: |
