add main to RayDP CI branches

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -19,9 +19,9 @@ name: RayDP CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ master ]
+    branches: [ main, master ]
 
 jobs:
   build-and-test:
