--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -68,13 +68,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
+          SUBVERSION=$(python -c 'import sys; print(sys.version_info[1])')
           if [ "$(uname -s)" == "Linux" ]
           then
             pip install torch==1.8.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
           else
             pip install torch
           fi
-          pip install pytest koalas tensorflow tabulate ray[tune]==1.4.0 xgboost_ray grpcio-tools
+          pip install pytest ray[tune] koalas tensorflow tabulate xgboost_ray grpcio-tools
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
           pip install horovod[pytorch,ray]
