--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -29,7 +29,6 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        pyspark-version: [3.0.0, 3.1.2]
         python-version: [3.6, 3.7, 3.8]
 
     runs-on: ${{ matrix.os }}
@@ -112,7 +111,7 @@ jobs:
         env:
           GITHUB_CI: 1
         run: |
-          pip install pyspark==${{ matrix.pyspark-version }}
+          pip install pyspark==3.1.2
           ./build.sh
           pip install dist/raydp-*.whl
       - name: Lint
