--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -31,6 +31,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
         python-version: [3.6, 3.7, 3.8]
+        spark-version: [3.1.3, 3.2.1]
 
     runs-on: ${{ matrix.os }}
 
@@ -88,7 +89,7 @@ jobs:
         env:
           GITHUB_CI: 1
         run: |
-          pip install pyspark==3.2.0
+          pip install pyspark==${{ matrix.spark-version }}
           ./build.sh
           pip install dist/raydp-*.whl
       - name: Lint
