--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -103,9 +103,9 @@ jobs:
           ray stop --force
       - name: Test Examples
         run: |
-          ray start --head
-          python examples/raydp-submit.py
-          ray stop
+          # ray start --head
+          # python examples/raydp-submit.py
+          # ray stop
           python examples/random_nyctaxi.py
           python examples/pytorch_nyctaxi.py
           python examples/tensorflow_nyctaxi.py
