--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -30,13 +30,15 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        python-version: [3.6, 3.7, 3.8]
-        spark-version: [3.1.3, 3.2.1]
+        python-version: [3.7]
+        spark-version: [3.1.3]
 
     runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
@@ -77,6 +79,7 @@ jobs:
             pip install torch
           fi
           pip install ray==1.12 pytest koalas tensorflow==2.5.1 tabulate xgboost_ray[default] grpcio-tools
+          pip install torchmetrics
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
           pip install horovod[pytorch,ray]
