--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.7, 3.8]
         ray-version: [1.12.1, 1.13.0]
         spark-version: [3.1.3, 3.2.1]
 
