--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,7 +20,7 @@
     <spark.version>3.2.0</spark.version>
     <fasterxml.jackson.version>2.12.2</fasterxml.jackson.version>
     <scala.binary.version>2.12</scala.binary.version>
-    <ray.version>1.12.1</ray.version>
+    <ray.version>2.0.0-SNAPSHOT</ray.version>
   </properties>
 
   <repositories>
