Use mock clusters.
Use mock cluster based on doc here: https://docs.ray.io/en/latest/ray-core/examples/testing-tips.html#tip-4-create-a-mini-cluster-with-ray-cluster-utils-cluster

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -100,13 +100,7 @@ jobs:
       - name: Test with pytest
         run: |
           ray start --head --num-cpus 4
-          pytest python/raydp/tests/ -m"not spark_fractional_cpu and not spark_gpu"
-          ray stop --force
-          ray start --head --num-cpus 2
-          pytest python/raydp/tests/ -m"spark_fractional_cpu"
-          ray stop --force
-          ray start --head --num-cpus 2 --num-gpus 2
-          pytest python/raydp/tests/ -m"spark_gpu"
+          pytest python/raydp/tests/
           ray stop --force
       - name: Test Examples
         run: |
