try to fix test by running the custom resource test separately.

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -100,7 +100,8 @@ jobs:
       - name: Test with pytest
         run: |
           ray start --head --num-cpus 4
-          pytest python/raydp/tests/
+          pytest python/raydp/tests/ -m"not error_on_custom_resource"
+          pytest python/raydp/tests/ -m"error_on_custom_resource"
           ray stop --force
       - name: Test Examples
         run: |
