--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -82,8 +82,8 @@ jobs:
           else
             pip install torch
           fi
-          pip install tensorflow grpcio-tools --upgrade
-          pip install pyarrow==6.0.1 ray[train] pytest tensorflow tabulate grpcio-tools wget
+          pip install tensorflow --upgrade
+          pip install pyarrow==6.0.1 ray[train] pytest tensorflow tabulate grpcio-tools wget protobuf>=5.26.1,<6.0dev
           pip install "xgboost_ray[default]<=0.1.13"
           pip install torchmetrics
       - name: Cache Maven
