--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -83,7 +83,7 @@ jobs:
             pip install torch
           fi
           pip install tensorflow --upgrade
-          pip install pyarrow==6.0.1 ray[train] pytest tensorflow tabulate grpcio-tools wget protobuf>=5.26.1,<6.0dev
+          pip install pyarrow==6.0.1 ray[train] pytest tensorflow tabulate grpcio-tools wget protobuf>=5.26.1
           pip install "xgboost_ray[default]<=0.1.13"
           pip install torchmetrics
       - name: Cache Maven
