--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -33,8 +33,9 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [3.8, 3.9, 3.10.14]
+        python-version: [3.9, 3.10.14]
         spark-version: [3.2.4, 3.3.2, 3.4.0, 3.5.0]
+        ray-version: [2.34.0, 2.40.0]
 
     runs-on: ${{ matrix.os }}
 
@@ -82,7 +83,7 @@ jobs:
           else
             pip install torch
           fi
-          pip install pyarrow==6.0.1 ray[train] pytest tensorflow==2.13.1 tabulate grpcio-tools wget
+          pip install pyarrow==6.0.1 "ray[train]==${{ matrix.ray-version }}" pytest tensorflow==2.13.1 tabulate grpcio-tools wget
           pip install "xgboost_ray[default]<=0.1.13"
           pip install "xgboost<=2.0.3"
           pip install torchmetrics
