--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,6 +32,7 @@
     <scala.version>2.12.15</scala.version>
     <jackson.version>2.13.5</jackson.version>
     <scala.binary.version>2.12</scala.binary.version>
+    <junit-jupiter.version>5.10.1</junit-jupiter.version>
   </properties>
 
   <modules>
@@ -178,6 +179,19 @@
         <groupId>com.fasterxml.jackson.module</groupId>
         <artifactId>jackson-module-jaxb-annotations</artifactId>
         <version>${jackson.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>${junit-jupiter.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${junit-jupiter.version}</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
