--- a/.github/workflows/ray_nightly_test.yml
+++ b/.github/workflows/ray_nightly_test.yml
@@ -42,10 +42,11 @@ jobs:
         uses: actions/setup-python@e9aba2c848f5ebd159c070c61ea2c4e2b122355e # v2.3.4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@b6e674f4b717d7b0ae3baee0fbe79f498905dfde # v1.4.4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v5
         with:
-          java-version: 1.8
+          java-version: 17
+          distribution: 'corretto'
       - name: Install extra dependencies for macOS
         if: matrix.os == 'macos-latest'
         run: |
@@ -73,7 +74,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          pip install "numpy<1.24"
+          pip install "numpy<1.24" "click<8.3.0"
           SUBVERSION=$(python -c 'import sys; print(sys.version_info[1])')
           if [ "$(uname -s)" == "Linux" ]
           then
