--- a/.github/workflows/raydp_nightly.yml
+++ b/.github/workflows/raydp_nightly.yml
@@ -38,10 +38,11 @@ jobs:
       uses: actions/setup-python@0f07f7f756721ebd886c2462646a35f78a8bc4de # v1.2.4
       with:
         python-version: 3.9
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@b6e674f4b717d7b0ae3baee0fbe79f498905dfde # v1.4.4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v5
       with:
-        java-version: 1.8
+        java-version: 17
+        distribution: 'corretto'
     - name: days since the commit date
       run: |
           :
