--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Test with pytest
         run: |
           ray start --head --num-cpus 6
-          PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python pytest python/raydp/tests/ -v
+          pytest python/raydp/tests/ -v
           ray stop --force
       - name: Test Examples
         run: |
