--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -106,7 +106,7 @@ jobs:
           pylint --rcfile=python/pylintrc examples/*.py
       - name: Test with pytest
         run: |
-          ray start --head --num-cpus 6 --dashboard-host localhost
+          ray start --head --num-cpus 6
           pytest python/raydp/tests/ -v
           ray stop --force
       - name: Test Examples
